--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .menu {
 	text-align: center;
+	font-size: 24px;
 }
 .menu ul li {
-	list-style:none;   
-	display:inline;
+	list-style:none;
+	display: inline;
 }
 .menu ul li a {
 	text-decoration: none;
