--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body{
+	margin: 0;
+}
+
+ul{
+	margin: -8px 0 -8px 0;
+	padding: 15px 0 10px 0;
+}
+li{
+	margin-right: 20px;
+}
+
 .menu {
 	text-align: center;
 	font-size: 24px;
