--- a/style.css
+++ b/style.css
@@ -1,50 +1,14 @@
-body{
-	margin: 0;
-	margin-top: -48px;
+div {
+	background-color: #d5d5f4;
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	float: right;
 }
 
-ul{
-	margin: -8px 0 -8px 0;
-	padding: 15px 0 10px 0;
-	color: #FFF;
-}
-
-li{
-	margin-right: 20px;
-}
-
-header{
-	background: -webkit-gradient(linear, left top, left bottom, from(#A681B8), to(#FFF)) repeat-X;
-}
-
-a {
-	color: #FF4185;
-}
-
-.menu {
+h1{
+	font-size: 32px;
 	text-align: center;
-	font-size: 24px;
+	padding-top: 20%;
 }
 
-.menu ul li {
-	list-style:none;
-	display: inline;
-}
-
-.menu ul li a {
-	text-decoration: none;
-}
-
-.home {
-	margin: 40px 100px 40px 100px;
-}
-
-.header {
-	text-align: center;
-	font-family: 'Sacramento', 'cursive';
-	font-size: 36px;
-	margin-top: -40px;
-	margin-bottom: -74px;
-	color: #DD5858;
-	text-shadow: #000 1px 1px;
-}
