--- a/style.css
+++ b/style.css
@@ -1,14 +1,36 @@
-div {
+.logo {
 	background-color: #d5d5f4;
-	width: 200px;
-	height: 200px;
+	width: 250px;
+	height: 250px;
 	border-radius: 50%;
-	float: right;
+	margin-left: 65%;
+	margin-top: 5%;
 }
+
+.redes {
+	margin-left: 67%;
+	margin-top: 10px;
+}
+
 
 h1{
 	font-size: 32px;
 	text-align: center;
-	padding-top: 20%;
+	padding-top: 30%;
+	width: 205px;
+	padding-left: 19px;
+	padding-top: 90px;
 }
 
+ul {
+	list-style-type: none;
+	margin-bottom: 0;
+	margin-top: 0;
+	width: 69px;
+	padding-left: 30px;
+
+}
+
+li {
+	display: inline;
+}
