--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .logo {
 	background-color: #d5d5f4;
 	width: 200px;
@@ -28,6 +27,14 @@
 	height: 31px;
 }
 
+body{
+  background: url(image/dente-de-leao.jpg) no-repeat center center fixed;
+  background-size: cover; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+}
 
 h1{
 	font-size: 32px;
