alterando nome da pasta image para images

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 
 body{
-  background: url(image/dente-de-leao.jpg) no-repeat center center fixed;
+  background: url(images/dente-de-leao.jpg) no-repeat center center fixed;
   background-size: cover; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
