--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@
 	border-radius: 50%;
 	margin-left: 65%;
 	margin-top: 5%;	
+	transition-duration: 1s; 
 	-webkit-transition-duration: 1s;
-    -moz-transition-duration: 1;
-    -o-transition-duration: 1s;
-    transition-duration: 1s; 
-    -webkit-transition-property: -webkit-transform;
-    -moz-transition-property: -moz-transform;
-    -o-transition-property: -o-transform;
+	-moz-transition-duration: 1s;
+	-o-transition-duration: 1s;
+	-webkit-transition-property: -webkit-transform;
+	-moz-transition-property: -moz-transform;
+	-o-transition-property: -o-transform;
 }
 
-.logo:hover  
+.logo:hover
 {
     -webkit-transform:rotate(360deg);
     -moz-transform:rotate(360deg);
@@ -28,12 +28,12 @@
 }
 
 body{
-  background: url(images/dente-de-leao.jpg) no-repeat center center fixed;
-  background-size: cover; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -ms-background-size: cover;
-  -o-background-size: cover;
+ 	background: url(images/dente-de-leao.jpg) no-repeat center center fixed;
+	background-size: cover; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-ms-background-size: cover;
+	-o-background-size: cover;
 }
 
 h1{
@@ -50,7 +50,6 @@ ul {
 	margin-top: 0;
 	width: 69px;
 	padding-left: 30px;
-
 }
 
 li {
