Identaçao e Remoçao de codigo desnecessario

--- a/style.css
+++ b/style.css
@@ -9,13 +9,9 @@
 	-webkit-transition-duration: 1s;
 	-moz-transition-duration: 1s;
 	-o-transition-duration: 1s;
-	-webkit-transition-property: -webkit-transform;
-	-moz-transition-property: -moz-transform;
-	-o-transition-property: -o-transform;
 }
 
-.logo:hover
-{
+.logo:hover {
 	-webkit-transform:rotate(360deg);
 	-moz-transform:rotate(360deg);
 	-o-transform:rotate(360deg);
