--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 	-moz-background-size: cover;
 	-ms-background-size: cover;
 	-o-background-size: cover;
+	margin-top: 15%;
 }
 
 h1{
@@ -28,7 +29,7 @@ li {
 }
 
 .logo {
-	background-color: #d5d5f4;
+	background-color: rgba(255, 19, 21, 0.5);
 	width: 200px;
 	height: 200px;
 	border-radius: 50%;
@@ -41,6 +42,7 @@ li {
 }
 
 .logo:hover {
+	transform:rotate(360deg);
 	-webkit-transform:rotate(360deg);
 	-moz-transform:rotate(360deg);
 	-o-transform:rotate(360deg);
@@ -50,4 +52,18 @@ li {
 	margin-left: 68%;
 	margin-top: 10px;
 	height: 31px;
+}
+
+.sobre {
+	background-color: rgba(236, 207, 239, 0.5);
+	text-align: center;
+	margin-top: -161px;
+	border-radius: 15px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	float: left;
+	margin-right: 36%;
+	margin-left: 27%;
 }
