--- a/style.css
+++ b/style.css
@@ -5,16 +5,15 @@ body{
 	-moz-background-size: cover;
 	-ms-background-size: cover;
 	-o-background-size: cover;
-	margin-top: 15%;
 	margin-right: 15%;
 }
 
 h1{
-	font-size: 32px;
 	text-align: center;
-	padding-top: 30%;
-	width: 100%;
 	padding-top: 33%;
+	width: 100%;
+	font-family: "Sacramento", "cursive";
+	font-size: 1em;
 }
 
 ul {
@@ -35,11 +34,11 @@ li {
 	height: 200px;
 	border-radius: 50%;
 	margin-left: 70%;
-	margin-top: 5%;
-	transition-duration: 1s;
-	-webkit-transition-duration: 1s;
-	-moz-transition-duration: 1s;
-	-o-transition-duration: 1s;
+	margin-top: 15%;
+	transition-duration: 1.5s;
+	-webkit-transition-duration: 1.5s;
+	-moz-transition-duration: 1.5s;
+	-o-transition-duration: 1.5s;
 }
 
 .logo:hover {
