--- a/style.css
+++ b/style.css
@@ -10,10 +10,13 @@ body{
 
 h1{
 	text-align: center;
-	padding-top: 33%;
+	padding-top: 27%;
 	width: 100%;
-	font-family: "Sacramento", "cursive";
-	font-size: 1em;
+	font-family: "Belleza", "cursive";
+	font-size: 49px;
+	width: 210px;
+	color: #FFF;
+	text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 ul {
@@ -30,8 +33,8 @@ li {
 
 .logo {
 	background-color: rgba(255, 19, 21, 0.5);
-	width: 200px;
-	height: 200px;
+	width: 220px;
+	height: 220px;
 	border-radius: 50%;
 	margin-left: 70%;
 	margin-top: 15%;
@@ -49,7 +52,7 @@ li {
 }
 
 .redes {
-	margin-left: 74%;
+	margin-left: 76%;
 	margin-top: 10px;
 	height: 31px;
 }
@@ -57,7 +60,7 @@ li {
 .sobre {
 	background-color: rgba(236, 207, 239, 0.5);
 	text-align: center;
-	margin-top: -21%;
+	margin-top: -24%;
 	border-radius: 15px;
 	padding-bottom: 10px;
 	padding-top: 10px;
@@ -66,4 +69,6 @@ li {
 	float: left;
 	margin-right: 36%;
 	margin-left: 27%;
+	font-family: "cursive";
+	font-size: 18px;
 }
