--- a/public/style.css
+++ b/public/style.css
@@ -33,11 +33,13 @@ li {
 	25% {-webkit-transform: rotate(40deg); }
 	50% {-webkit-transform: rotate(-30deg); }
 	75% {-webkit-transform: rotate(40deg); }
-	100% {-webkit-transform: rotate(-30deg); }
+	100% {-webkit-transform: rotate(0deg); }
 }
 
 .container {
-	margin: 90px 120px;
+	margin-bottom: 90px;
+	margin-left:  120px;
+	margin-right: 120px;
 }
 
 .logo {
@@ -53,9 +55,9 @@ li {
 }
 
 .logo:hover {
-	-webkit-animation: balanco 2s alternate infinite linear;
-	-moz-animation: balanco 2s alternate infinite linear;
-	-o--animation: balanco 2s alternate infinite linear;
+	-webkit-animation: balanco 2s alternate linear;
+	-moz-animation: balanco 2s alternate linear;
+	-o--animation: balanco 2s alternate linear;
 }
 
 .redes {
