--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,8 @@ body{
 	-moz-background-size: cover;
 	-ms-background-size: cover;
 	-o-background-size: cover;
+	border-top: 3px solid #68D668;
+	margin: 0px;
 }
 
 h1{
