--- a/public/style.css
+++ b/public/style.css
@@ -82,9 +82,9 @@ li {
 	padding-left: 10px;
 	padding-right: 10px;
 	float: left;
-	font-family: "cursive";
-	font-size: 18px;
+	font-family: "verdana";
+	font-size: 15px;
 	width: 56%;
 	margin-left: 5%;
-	margin-top: 3%;
+	margin-top: 7%;
 }
